# tagsnip

./: .gitattributes  .gitignore  README-pypi.md  README.md  pyproject.toml  setup.cfg  sniptex.sty  tagsnip.sty
.github/workflows/: python-publish.yml
docs/: citace.bib  citations.bib  docs-czech.tex  docs.tex  main-czech.tex  main.tex  tagsnip-docs.tex
sniptex/: cli.py
tagsnip/: __main__.py  cli.py  extractor.py  fetcher.py  validate.py
tests/: test_extractor.py  test_fetcher.py
