[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagsnip"
version = "1.0.0"
description = "Python package for extracting tagged code snippets from local files or remote sources."
readme = "README-pypi.md"
requires-python = ">=3.10"
dependencies = ["requests"]
authors = [
    { name = "Rostislav Brož" }
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/brozrost/tagsnip"
Repository = "https://github.com/brozrost/tagsnip"

[tool.setuptools]
packages = ["tagsnip"]

[project.scripts]
tagsnip = "tagsnip.cli:main"